kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vue-course
spec:
  containers:
  - name: vue-course
    image: ftsharedacr.azurecr.io/v3c:latest
    ports:
    - containerPort: 8080
