kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: vue-course-service
spec:
    selector:
        app: vue-course
    ports:
        - protocol: TCP
          port: 80
          targetPort: 8080
