kubernetes/ingress.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vue-course-ingress
  namespace: transit
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: vue-course-cert
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`vue.k8s.test.formitable.com`)
      services:
        - name: vue-course-service
          namespace: default
          port: 80
  tls:
    secretName: vue.k8s.test.formitable.com
    domains:
    - main: vue.k8s.test.formitable.com
